# stronginc

./: CMakeLists.txt  README.txt
cpp/: Fragment.cc  Fragment.h  FragmentLoader.cc  FragmentLoader.h  MessageBuffer.cc  MessageBuffer.h  PairMessage.hpp  ball_view.cc  ball_view.h  bfs_connectivity.cc  bfs_connectivity.h  bfs_multikhop.cc  bfs_multikhop.h  bfs_parallel.h  bfs_singlekhop.cc  bfs_singlekhop.h  communication.cc  communication.h  config.h  dual_inc_parallel.cc  dual_inc_parallel.h  dual_incfilter.cc  dual_incfilter.h  dual_incremental.cc  dual_incremental.h  dualsimulation.cc  dualsimulation.h  dualsimulation_parallel.cc  dualsimulation_parallel.h  edge.h  global.cc  global.h  graph.cc  graph.h  graph_loader.cc  graph_loader.h  graph_view.cc  graph_view.h  graphapi.h  serialization.cc  (+13 more)
cpp/app/function/: exper.cc  generate_query.cc  strongexc.cc  viewexpr.cc
cpp/app/test/: example.cc  generate_query.cc  parallel_test.cc  serial_test.cc  test.cc  test_util.cc  util_test.cc
cpp/core/: Fragment.cc  Fragment.h  FragmentLoader.cc  FragmentLoader.h  ball_view.cc  ball_view.h  edge.h  global.cc  global.h  graph.cc  graph.h  graph_loader.cc  graph_loader.h  graph_view.cc  graph_view.h  graphapi.h  iterator_container.h  strongr.h  vertex.h  view.cc  view.h
cpp/io/: io_class.h  io_local.h
cpp/parallel/: bfs_connectivity.cc  bfs_connectivity.h  bfs_multikhop.cc  bfs_multikhop.h  bfs_parallel.cc  bfs_parallel.h  bfs_singlekhop.cc  bfs_singlekhop.h  dual_inc_parallel.h  dual_incfilter.h  dual_parallel_inc.cc  dual_parallel_inc.h  dualsimulation_parallel.cc  dualsimulation_parallel.h  strongparallel_incremental.cc  strongparallel_incremental.h  strongsim_parallel.cc  strongsim_parallel.h
cpp/serial/: dual_incremental.cc  dual_incremental.h  dualsimulation.cc  dualsimulation.h  strong_incremental.cc  strong_incremental.h  strongsimulation.cc  strongsimulation.h
cpp/utils/: Message.hpp  MessageBuffer.cc  MessageBuffer.h  PairMessage.hpp  communication.cc  communication.h  generate.cc  generate.h  serialization.cc  serialization.h  time.cc  time.h  util.cc  util.h
data/: synmtic.e  synmtic.r  synmtic.v
data/incsynmtic/: add_e1  add_e2  add_e3  add_e4  add_e5  add_e6  add_e7  add_e8  add_e9  rm_e1  rm_e2  rm_e3  rm_e4  rm_e5  rm_e6  rm_e7  rm_e8  rm_e9
